test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_parse/bad_specifier_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  void
  char
  *
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
